fix description list overflow

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -431,7 +431,7 @@ ol li {
 
 dl {
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: auto minmax(0, 1fr);
   grid-gap: 0.2rem 1rem;
 
   dt {
@@ -442,6 +442,11 @@ dl {
   dd {
     grid-column-start: 2;
     margin: 0;
+    min-width: 0;
+
+    pre {
+      margin: 0;
+    }
   }
 }
 
